# SNaiKE

./: CMAKE_Output.txt  CMakeLists.txt  README.md  hamiltonTestData.txt
include/: Debug.hpp  Game.hpp  GameClock.hpp  GameConfig.hpp  GameController.hpp  GameLoop.hpp  GameResources.hpp  GameStates.hpp  ScoreLogger.hpp  Snake.hpp  State.hpp  StateContext.hpp  StateMachine.hpp
include/AI/: AIPlayer.hpp  AStarStrategy.hpp  AdvancedStrategy.hpp  BaseStrategy.hpp  BasicStrategy.hpp  FloodFillStrategy.hpp  GridHeatMap.hpp  HamiltonStrategy.hpp  HeatMap.hpp  ISnakeStrategy.hpp  ManhattanStrategy.hpp  RandomStrategy.hpp
include/Game/: Position.hpp
include/Window/: WindowController.hpp
include/debug/: DebugLogger.hpp  DebugOverlay.hpp
include/events/: Event.hpp  EventManager.hpp  GameEvent.hpp  GameLifecycleEvent.hpp  StateTransitionEvent.hpp
include/input/: InputHandler.hpp
include/states/: GameOverState.hpp  MenuState.hpp  PausedState.hpp  PlayingState.hpp  StateClock.hpp  StateFactory.hpp  StateTypes.hpp  States.hpp
src/: Game.cpp  GameController.cpp  GameLoop.cpp  GameStates.cpp  Snake.cpp  StateMachine.cpp  main.cpp
src/AI/: AIPlayer.cpp  AStarStrategy.cpp  AdvancedStrategy.cpp  BaseStrategy.cpp  BasicStrategy.cpp  FloodFillStrategy.cpp  HamiltonStrategy.cpp  HybridAStarStrategy.hpp  ManhattanStrategy.cpp  RandomStrategy.cpp  VoronoiStrategy.hpp  WallFollowStrategy.hpp
src/Input/: InputHandler.cpp
src/debug/: DebugLogger.cpp
src/states/: GameOverState.cpp  MenuState.cpp  PausedState.cpp  PlayingState.cpp  StateFactory.cpp
